--- a/src/css/ngSelectPicker.css
+++ b/src/css/ngSelectPicker.css
@@ -1,5 +1,5 @@
-/*!
- * ngSelectPicker v1.0.0
+﻿/*!
+ * ngSelectPicker v1.0.2
  * Copyright 2016 Eric Ferreira
  * Contato: ericferreira1992@gmail.com
  */
